dataset1235/2025-2/1379599236/users/2549797095/executions/2627828506_3968058195.log
== SUBMISSION (2025-09-01 18:05:02)
-- CODE: 
pesos= float(input())
real= round((pesos*0.018, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real= round((pesos*0.018, 2))
          ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real= round((pesos*0.018, 2))
          ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real= round((pesos*0.018, 2))
          ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real= round((pesos*0.018, 2))
          ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real= round((pesos*0.018, 2))
          ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real= round((pesos*0.018, 2))
          ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 18:04:25)
-- CODE: 
pesos= float(input())
real= (pesos*0,018)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    real= (pesos*0,018)
                   ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    real= (pesos*0,018)
                   ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    real= (pesos*0,018)
                   ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    real= (pesos*0,018)
                   ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    real= (pesos*0,018)
                   ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    real= (pesos*0,018)
                   ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 18:04:57)
-- CODE: 
pesos= float(input())
real= round((pesos*0.018, 2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    real= round((pesos*0.018, 2)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    real= round((pesos*0.018, 2)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    real= round((pesos*0.018, 2)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    real= round((pesos*0.018, 2)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    real= round((pesos*0.018, 2)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    real= round((pesos*0.018, 2)
               ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 18:05:51)
-- CODE: 
pesos= float(input())
real= round((pesos * 0.018), 2)
print(real)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
---- user output:
0.02
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
---- user output:
0.04
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
---- user output:
0.14
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
---- user output:
0.38
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
---- user output:
0.34
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
---- user output:
0.16
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 18:05:32)
-- CODE: 
pesos= float(input())
real= round((pesos * 0.018), 2)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
---- user output:
None
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
---- user output:
None
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
---- user output:
None
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
---- user output:
None
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
---- user output:
None
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
